application/infra/grafana/deployment.yaml
# Source: prometheus-operator/charts/grafana/templates/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: NAMESPACE-grafana
  namespace: NAMESPACE
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        checksum/config: 8e62afb844c79e1c855f33558c2b92748db99ae3cfc8bff8126af79f8ae2a239
        checksum/dashboards-json-config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/sc-dashboard-provider-config: 13fd5405569894c17020c2b93d816d0b67ba44000983ce17a4edafe473b4231b
        checksum/secret: 1ae518ed379d8639390a6738a1467f7db5a93ce119bb94df48951d7ecdf6fab3
    spec:
      
      serviceAccountName: NAMESPACE-grafana
      securityContext: {}
        
      containers:
        - name: grafana-sc-dashboard
          image: "kiwigrid/k8s-sidecar:0.1.20"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 0.3m
              memory: 300Mi
            
          volumeMounts:
            - name: sc-dashboard-volume
              mountPath: "/tmp/dashboards"
        - name: grafana
          image: "grafana/grafana:6.4.2"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: "/etc/grafana/grafana.ini"
              subPath: grafana.ini
            - name: storage
              mountPath: "/var/lib/grafana"
            - name: sc-dashboard-volume
              mountPath: "/tmp/dashboards"
            - name: sc-dashboard-provider
              mountPath: "/etc/grafana/provisioning/dashboards/sc-dashboardproviders.yaml"
              subPath: provider.yaml
            - name: sc-datasources-volume
              mountPath: "/etc/grafana/provisioning/datasources"
          ports:
            - name: service
              containerPort: 80
              protocol: TCP
            - name: grafana
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 60
            timeoutSeconds: 30
            
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            
          resources:
            limits:
              cpu: 0.3m
              memory: 300Mi
            
      volumes:
        - name: config
          configMap:
            name: NAMESPACE-grafana
        - name: storage
          emptyDir: {}
        - name: sc-dashboard-volume
          emptyDir: {}
        - name: sc-dashboard-provider
          configMap:
            name: NAMESPACE-grafana-config-dashboards
        - name: sc-datasources-volume
          emptyDir: {}
